/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/


2025-05-05 17:50 UTC+0200 Wilfried Brunken DF7BE
* samples/escrita.prg
  ! Bugfix compile error LINUX.
  ! For details see comment lines in
  ! sample program.
  

2025-05-05 12:42 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/GetWinVers.hbp
   * clean.sh
   * samples/Readme.txt
   * samples/allhbp.hbp
   * samples/clean.sh
   * samples/makeallsam.sh
     ! forgot to update references to GetWinVers on previous commit

2025-05-05 12:40 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/GetWinVers.prg
     ! Removed, and added to demofunc.prg
   * samples/demofunc.prg
     ! Removed MsgYesNoCancel() and others already on demodlgbox.prg
     ! added from GetWinVers.prg
   * samples/testsamples.prg
     ! More tests

2025-05-05 01:00 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/testsamples.prg
     ! test samples, to help do not forgot some things
   * samples/demobitmap.prg
   * samples/demobrowseado.prg
   * samples/demobrowsebmp.prg
   * samples/demobrowsedbf.prg
   * samples/democheckbox.prg
   * samples/demogrid5.prg
   * samples/demoimage1.prg
   * samples/demoimageview.prg
   * samples/demolistbox.prg
   * samples/demolistboxsub.prg
   * samples/demomenu.prg
   * samples/demomenuxml.prg
   * samples/demomonthcal.prg
   * samples/demosplitter.prg
   * samples/demoxmltree.prg
     ! some button for code added
     ! some ButtonForSample oDlg parameter removed
     ! some dialog title wrong
     ! some filename not found on #pragma

2025-05-04 15:40 UTC-0300 Jose Quintas jmcquintas-gmail.com
   - samples/testbrw.hbp
   * samples/demobrowsebmp.prg renamed from testbrw.prg
     ! added to demoall