@@ -113,7 +113,7 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
    Please use Harbour function RAT() to detect, if no file extension is entered and
    add it in this case after returning of this function.<br>
    <br>
-   See sample program "samples/fileselect.prg" for usage of all file selection dialogs.<br>
+   See sample program "samples/demodlgbox.prg" for usage of all file selection dialogs.<br>
    For Multi Platform purposes use the compiler switch "#ifdef __GTK__".<br>
    <br>
    An example:
@@ -132,7 +132,7 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
    </ul>
    Use this function instead of hwg_SelectFile() or hwg_SaveFile() with GTK.<br>
    Only for selecting an existing file, for creating a new file use hwg_SelectFile().<br>
-   See sample program "samples/fileselect.prg" for usage of all file selection dialogs.<br>
+   See sample program "samples/demodlgbox.prg" for usage of all file selection dialogs.<br>
    For Multi Platform purposes use the compiler switch "#ifdef __GTK__".<br>
    <br>
    An example:
@@ -146,7 +146,7 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
      <li> cTitle - optional string parameter, the title of a dialog box.
      <li> Return value - a string with a selected folder name, or an empty string, if a folder wasn't selected.
    </ul>
-   See sample program "samples/fileselect.prg" for usage of all file selection dialogs.<br>
+   See sample program "samples/demodlgbox.prg" for usage of all file selection dialogs.<br>
    <br>
 
    <br><strong class="subhead"> hwg_SaveFile( cPrompt,cDescript,cMask,cInitDir,cTitle )</strong> (Windows only)
@@ -162,7 +162,7 @@ Find this code also in "utils\devtools\dbfcompare.prg".<br>
    <br>
    This function is a suitable solution, if an application needs to overwrite an existing<br>
    file or create a new one, so that the user can input a file name of a non exiting file.<br>
-   See sample program "samples/fileselect.prg" for usage of all file selection dialogs.<br>
+   See sample program "samples/demodlgbox.prg" for usage of all file selection dialogs.<br>
    On GTK, use hwg_Selectfile() instead.<br>
    For Multi Platform purposes use the compiler switch "#ifdef __GTK__".<br>
    <br>
