@@ -1,10 +1,0 @@
-#
-# $Id$
-#
-# auto included hbmk.hbm
-
--ofileselect
-
-fileselect.prg
-
-# ==================== EOF of fileselect.hbp ===============
